--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ h2,h3,h4{
 
 }
 
+
+
 body,
 input {
   font-family: "Poppins", sans-serif;
@@ -122,7 +124,9 @@ form.sign-in-form {
   line-height: 1;
   font-weight: 600;
   font-size: 1.1rem;
-  color: #333;
+  background: linear-gradient(45deg,#0a4ee1,#eb1d9f,rgba(27, 13, 56, 0.467));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .input-field input::placeholder {
@@ -198,7 +202,7 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background: linear-gradient(45deg,#4d5464,#94547a);
+  background-color: #4481eb;
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
