--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ container {
   width: 45px;
   height: 45px;
   border-radius: 50% 50% 50% 0%;
-  background-color: #4c9beb;
+  background-color: #fff;
   display: inline-block;
   margin-left: -25px;
   z-index: 5;
@@ -361,7 +361,7 @@ container {
   width: 65px;
   height: 65px;
   border-radius: 50% 50% 0% 50%;
-  background-color: #4c9beb;
+  background-color: #fff;
   display: inline-block;
   z-index: 5;
 }
@@ -370,7 +370,7 @@ container {
   width: 50px;
   height: 50px;
   border-radius: 50% 50% 50% 0%;
-  background-color: #4c9beb;
+  background-color: #fff;
   display: inline-block;
   margin-left: -20px;
   z-index: 5;
@@ -380,7 +380,7 @@ container {
   width: 30px;
   height: 30px;
   border-radius: 50% 50% 0% 50%;
-  background-color: #4c9beb;
+  background-color: #fff;
   display: inline-block;
   z-index: 5;
 }
