--- a/style.css
+++ b/style.css
@@ -1051,10 +1051,10 @@ container {
 /* sersching  starts//////////////////////////////////// */
 #wifi-loader {
   --background: #62abff;
-  --front-color: #4f29f0;
-  --back-color: #c3c8de;
-  --text-color: #414856;
-  width: 64px;
+  --front-color: #c5c5c5;
+  --back-color: #dee0ea;
+  --text-color: #49f6ff;
+  width: 174px;
   height: 64px;
   border-radius: 50px;
   position: relative;
