--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ form.sign-in-form {
   grid-template-columns: 15% 85%;
   padding: 0 0.4rem;
   position: relative;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
 }
 
 .input-field i {
@@ -206,6 +207,7 @@ form.sign-in-form {
   font-weight: 600;
   font-size: 1.1rem;
   color: #c8c7c7;
+  
   
   
  
