--- a/style.css
+++ b/style.css
@@ -6,6 +6,26 @@
   box-sizing: border-box;
 }
 
+
+.date-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 24px;
+}
+
+.day {
+  font-weight: bold;
+   color: #060b3b;;
+}
+
+.date {
+  font-weight: bold;
+  font-size: 26px;
+  color: #060b3b;
+}
+
+
 #logo{
   width: 190px;
   position: absolute;
