--- a/style.css
+++ b/style.css
@@ -24,7 +24,10 @@
   font-size: 26px;
   color: #060b3b;
 }
-
+.time{
+  color: #060b3b;
+  font-weight: bold;
+}
 
 #logo{
   width: 190px;
@@ -1118,7 +1121,7 @@ container {
     width: 100px;
     position: absolute;
     left: 35%;
-    top:163px;
+    top:153px;
     height: 70px;
    
   }
