--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ video{
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg,  #060b3b 0%,  #0c177b 100%);
+  background-image: linear-gradient(-45deg,  #060b3b 0%,   #060b3b 100%);
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
