--- a/style.css
+++ b/style.css
@@ -262,8 +262,9 @@ div:where(.swal2-container) div:where(.swal2-popup) {
   display: grid;
   grid-template-columns: repeat(1,1fr);
  backdrop-filter: blur(500px);
+ border: 2px solid;
  border-radius: 10px;
-
+ border-color: rgb(231, 227, 227);
 }
 .container02{
 margin-top: 70px;
