--- a/style.css
+++ b/style.css
@@ -191,6 +191,9 @@ h2#swal2-title.swal2-title{
 
  
 }
+.swal2-input{
+  color: lavender;
+}
 div#swal2-html-container.swal2-html-container {
   color: #d5cccc;
   
